[package]
name = "pallet-validator"
version = "0.1.0"
edition = "2021"
description = "Simple validator registration pallet"
license = "Unlicense"
publish = false

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
runtime-benchmarks = ["frame-support/runtime-benchmarks", "frame-system/runtime-benchmarks"]